tests/conformance/invalid/02-invalid-doctype/input.sgl
%% notebook
name: bad-doctype
version: 1.0.0

* fact: notebook is not a valid doctype
